objects/WorkType.object
<CustomObject>
    <fields>
        <fullName>SC_ServiceAppointmentRecordType__c</fullName>
        <description>This field stores the Service Appointment&apos;s record type name (developer name)</description>
        <label>Service Appointment Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_WorkOrderLineItemRecordType__c</fullName>
        <description>This field stores the Work Order Line Item&apos;s record type name (developer name)</description>
        <label>Work Order Line Item Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_WorkOrderRecordType__c</fullName>
        <description>This field stores the Work Order&apos;s record type name (developer name).</description>
        <label>Work Order Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>